# AI-server

./: .editorconfig  .env.example  .gitignore  INVENTORY.md  MEMORY_SERVER_CORRECTION_PLAN.md  Makefile  PORT_ALLOCATION_PLAN.md  README.md  SYSTEM_SPECS.md  VSCODE_TESTING_GUIDE.md  atlas_test_workflow.py  memory-server-api-tests.http  package.json  requirements.in  requirements.txt  setup.py  start_r2r.sh  start_servers.sh  system-inventory.json  test_atlas.txt  test_document_for_interception.json  test_memory_server_interactive.py
.githooks/: commit-msg  pre-commit  pre-push
R2R/: conversation_test_2025-08-23T07-12-26.556034.txt  create_icon.py  final_demonstration_report.py  ingest_and_query_test.py  ingest_conversation_to_r2r.py  offline_activity_20250823_071226.jsonl  setup_r2r_demo.py  test_code.py  test_config.json  test_extension_functionality.py  test_readme.md
apps/llm-server/: .env.example  PROFILE_CONFIG_SUMMARY.md  QUICKSTART.md  README.md  api_examples.py  pyproject.toml  requirements.txt  test_ai_server_complete.py  test_profile_selection.py  test_server.py
apps/llm-server/agents/: __init__.py  debugger.py  task_planner.py  tdd_verifier.py
apps/llm-server/agents/coders/: secondary_coder.py
apps/llm-server/configs/agents/: specialized_coders_config.py
apps/llm-server/configs/llama_cpp/: m1_ultra_config.py  optimized_llama.py
apps/llm-server/rag_components/: __init__.py
apps/llm-server/rag_components/corag/: __init__.py  engine.py
apps/llm-server/rag_components/embeddings/: __init__.py  engine.py
apps/llm-server/rag_components/graphrag/: memory.py
apps/llm-server/rag_components/vector_store/: __init__.py
apps/llm-server/rag_data/: .gitkeep
apps/llm-server/scripts/: setup.py
apps/llm-server/server/api/: __init__.py  agent_router.py  monitoring_router.py  openai_adapter.py  progress_router.py
apps/llm-server/server/core/: __init__.py  memory_balancer.py  settings.py  transparent_orchestrator.py
apps/llm-server/workflows/: __init__.py  base_workflow.py  code_review_workflow.py  quick_fix_workflow.py
config/: README.md  atlas.yaml  autocleanup.yaml  endpoints.yaml  gui.yaml  messaging.yaml  models.yaml  monitoring.yaml  profiles.yaml  service-registry.yaml  system.yaml
docs/: README.md  WEB-SCRAPPER.md
llm-server/: benchmark_server.py  r2r_integration.py  r2r_integration_complete.py  real_server.py  start.sh  start_ai_server.sh
logs/: 2025-01-09_154100_4.3.1_neo4j_installation.md  2025-01-09_155000_4.3.2_neo4j_driver.md  2025-01-09_155700_4.3.3_heap_limits.md  2025-01-09_163000_4.3.7_indexes.md  (+111 more)
memory-server/: TESTING_REPORT.md  pyproject.toml
memory-server/api/: __init__.py  main.py
memory-server/api/routers/: __init__.py  documents.py  health.py
memory-server/api/utils/: __init__.py  content_analyzer.py  document_processor.py  web_scraper.py  web_search.py  workspace_manager.py
memory-server/core/: config.py  logging_config.py
memory-server/core/hybrid_store/: __init__.py  vector_store.py
memory-server/core/late_chunking/: __init__.py  chunking_strategies.py  context_aware_chunker.py
memory-server/core/lazy_graph/: __init__.py  lazy_indexer.py
memory-server/tests/: __init__.py  test_chunking_engine.py
memory-server/tests/integration/: test_activity_endpoint.py  test_core_only.py  test_memory_server_comprehensive.py  test_performance_basic.py  test_web_search_endpoints.py
(+362 files in other folders)
