[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-server"
version = "0.1.0"
description = "AI Model Orchestra for M1 Ultra - High-performance LLM server with specialized agents"
authors = [
    {name = "AI-Server Team", email = "team@ai-server.local"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

keywords = ["llm", "ai", "server", "m1", "ultra", "langgraph", "llama-cpp"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "black>=23.12.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
packages = ["llm_server"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "llama_cpp.*",
    "langgraph.*",
    "GPUtil.*",
]
ignore_missing_imports = true